loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:6: error: not found: value avancement
    avancement = avancement + 1
    ^