loopfor.LoopStairs.scala.code
for (c <- 1 to 14) {
  baisseBrosse()

  while (!estFaceMur()) {
    avance()
    avancement = avancement + 1
  }

  leveBrosse()
  gauche()
  avance()
  droite()
  avance()
  
}